--- a/docker/envs/Dockerfile.router
+++ b/docker/envs/Dockerfile.router
@@ -1,76 +1,134 @@
-# Router SGLang Docker environment - Lightweight router service
+# Optimized Router SGLang Docker environment - Lightweight router service
+# syntax=docker/dockerfile:1.4
+
 ARG PYTHON_VERSION=3.12
-FROM ubuntu:24.04 AS base
+ARG UBUNTU_VERSION=24.04
 
-# set the environment variables
-ENV PATH="/root/.local/bin:${PATH}"
-ENV DEBIAN_FRONTEND=noninteractive
+# ================================
+# Stage 1: Base System Setup
+# ================================
+FROM ubuntu:${UBUNTU_VERSION} AS base
 
-# uv environment variables
-ENV UV_HTTP_TIMEOUT=500
-ENV VIRTUAL_ENV="/opt/venv"
-ENV UV_PYTHON_INSTALL_DIR=/opt/uv/python
-ENV UV_LINK_MODE="copy"
+# Environment variables
+ENV PATH="/root/.local/bin:${PATH}" \
+    DEBIAN_FRONTEND=noninteractive \
+    UV_HTTP_TIMEOUT=500 \
+    VIRTUAL_ENV="/opt/venv" \
+    UV_PYTHON_INSTALL_DIR=/opt/uv/python \
+    UV_LINK_MODE="copy"
+
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
-# install dependencies
+# Set timezone and install minimal dependencies
 RUN echo 'tzdata tzdata/Areas select America' | debconf-set-selections \
     && echo 'tzdata tzdata/Zones/America select Los_Angeles' | debconf-set-selections \
-    && apt update -y \
-    && apt install -y curl \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends \
+        ca-certificates \
+        curl \
     && rm -rf /var/lib/apt/lists/* \
-    && apt clean
+    && apt-get clean
 
-# install uv
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+# Install uv package manager
+RUN --mount=type=cache,target=/tmp/uv-cache \
+    curl -LsSf https://astral.sh/uv/install.sh | sh
 
-# install python
+# Create Python virtual environment
 RUN uv venv --python ${PYTHON_VERSION} --seed ${VIRTUAL_ENV}
 
-######################### BUILD IMAGE #########################
-FROM base AS build-image
+# ================================
+# Stage 2: Build Dependencies
+# ================================
+FROM base AS build-deps
+
+# Install build dependencies
+RUN --mount=type=cache,target=/var/cache/apt \
+    --mount=type=cache,target=/var/lib/apt \
+    apt-get update \
+    && apt-get install -y --no-install-recommends \
+        git \
+        build-essential \
+        libssl-dev \
+        pkg-config \
+        protobuf-compiler
+
+# ================================
+# Stage 3: Rust Toolchain
+# ================================
+FROM build-deps AS rust-toolchain
+
+# Install Rust toolchain with caching
+ENV PATH="/root/.cargo/bin:${PATH}"
+RUN --mount=type=cache,target=/usr/local/cargo/registry \
+    --mount=type=cache,target=/tmp/rustup-cache \
+    curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \
+    && rustc --version && cargo --version && protoc --version
+
+# ================================
+# Stage 4: Source Code Download
+# ================================
+FROM rust-toolchain AS source-download
 
 ARG SGLANG_REPO_REF=main
 
-# set the environment variables
-ENV PATH="/root/.cargo/bin:${PATH}"
-
-# install dependencies
-RUN apt update -y \
-    && apt install -y git build-essential libssl-dev pkg-config protobuf-compiler \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt clean
-
-# install rustup from rustup.rs
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \
-    && rustc --version && cargo --version && protoc --version
-
-# pull the github repository
-RUN cd /opt \
+# Download SGLang source with git cache
+RUN --mount=type=cache,target=/tmp/git-cache \
+    cd /opt \
     && git clone --depth=1 https://github.com/sgl-project/sglang.git \
-    && cd /opt/sglang \
+    && cd sglang \
     && git checkout ${SGLANG_REPO_REF}
 
-# working directory
+# ================================
+# Stage 5: Router Build
+# ================================
+FROM source-download AS router-build
+
 WORKDIR /opt/sglang/sgl-router
 
-# build the rust dependencies
-RUN cargo build --release \
-    && uv build \
-    && rm -rf /root/.cache
+# Build router with cargo cache
+RUN --mount=type=cache,target=/usr/local/cargo/registry \
+    --mount=type=cache,target=/opt/sglang/sgl-router/target \
+    cargo build --release
 
-######################### ROUTER IMAGE #########################
-FROM base AS router-image
+# Build Python wheel with uv
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv build
 
-# Copy the built package from the build image
-COPY --from=build-image /opt/sglang/sgl-router/dist/*.whl dist/
+# ================================
+# Stage 6: Runtime Image
+# ================================
+FROM base AS runtime
 
-# Build the package and install
-RUN uv pip install --force-reinstall dist/*.whl
+# Copy the built wheel from build stage
+COPY --from=router-build /opt/sglang/sgl-router/dist/*.whl /tmp/dist/
 
-# Clean up unnecessary files to reduce the image size
-RUN rm -rf /root/.cache \
-    && apt purge -y --auto-remove curl
+# Install the router package
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv pip install --force-reinstall /tmp/dist/*.whl \
+    && rm -rf /tmp/dist
 
-# Set the entrypoint to the main command
+# Clean up build dependencies 
+RUN apt-get purge -y --auto-remove curl \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
+
+# Add health check
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+    CMD python3 -c "import sglang_router; print('Router ready')" || exit 1
+
+# Create non-root user for security
+RUN groupadd -r sglang && useradd -r -g sglang sglang
+USER sglang
+
+# Set the entrypoint
 ENTRYPOINT ["python3", "-m", "sglang_router.launch_router"]
+
+# Default command (can be overridden)
+CMD ["--host", "0.0.0.0", "--port", "8080"]
+
+# Labels
+LABEL org.opencontainers.image.title="SGLang Router" \
+      org.opencontainers.image.description="Lightweight SGLang router service" \
+      org.opencontainers.image.vendor="SGLang Project" \
+      environment="router" \
+      python_version="${PYTHON_VERSION}"
